# cutstitch

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
cutstitch/: __init__.py  cli.py  core.py  modes.py
tests/: test_cli.py  test_core.py  utils.py
